--- a/css/styles.css
+++ b/css/styles.css
@@ -24,9 +24,22 @@ list-style-type: none;
 }
 /* Header */
 .container{
-width: 1158px;
-padding: 0 15px;
+width: 320px;
+padding: 0 16px;
 margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .container{
+        max-width: 768px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .container{
+        max-width: 1158px;
+        padding: 0 15px;
+    }
 }
 
 .header{
@@ -39,12 +52,10 @@ margin: 0 auto;
 .header-container{
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding: 16px;
 }
 
-.navigation{
-    display: flex;
-    align-items: center;
-}
 
 .logo{
 font-family: "Raleway", sans-serif;
@@ -55,7 +66,6 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
 text-decoration: none;
-margin-right: 76px;
 }
 
 .logo-tech{
@@ -70,63 +80,129 @@ text-decoration: none;
 }
 
 .header-list{
-display: flex;
-gap: 40px;
-}
-
-.header-link{
-font-weight: 500;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #2e2f42;
-text-decoration: none;
-padding: 24px  0;
-display: block;
-position: relative;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-link-box{
-    color: #404bbf;
-}
-
-.header-link-box::after{
-content: "";
-border-radius: 2px;
-width: 48px;
-height: 4px;
-background: #404bbf;
-position: absolute;
-left: 0;
-bottom: -1px;
-display: block;
-}
-
-.header-link:hover,
-.header-link:focus {
-color: #404bbf;
+display: none;
 }
 
 .contacts-item{
-font-style: normal;
-margin-left: auto;
+    display: none;
+    }
+
+.open-menu-button{
+    background-color: transparent;
+    cursor: pointer;
+    line-height: 0;
+    border: none;
 }
 
-.contacts{
-font-weight: 400;
-font-size: 16px;
-line-height: 1.5;
-letter-spacing: 0.02em;
-color: #434455;
-text-decoration: none;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+@media screen and (min-width:768px) {
+    .header-container{
+        padding: 0 24px;
+    }
+
+    .navigation{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .logo{
+        margin-right: 120px;
+        display: flex;
+        align-items: center;
+    }
+
+    .header-list{
+        display: flex;
+        flex-direction: row;
+        gap: 40px;
+    }
+
+    .header-link{
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+        text-decoration: none;
+        padding: 24px  0;
+        display: block;
+        position: relative;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .header-link-box{
+        color: #404bbf;
+    }
+
+    .header-link-box::after{
+        content: "";
+        border-radius: 2px;
+        width: 48px;
+        height: 4px;
+        background: #404bbf;
+        position: absolute;
+        left: 0;
+        bottom: -1px;
+        display: block;
+        width: 100%;
+        }
+
+    .header-link:hover,
+    .header-link:focus {
+        color: #404bbf;
 }
 
-.contacts:hover,
-.contacts:focus {
-color: #404bbf;
+    .contacts-item{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        display: block;
+        margin-left: auto;
 }
+
+    .header-list{
+        display: flex;
+        flex-direction: column;
+        gap: 12px;
+}
+
+    .contacts{
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.02em;
+        color: #434455;
+        text-decoration: none;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .contacts:hover,
+    .contacts:focus {
+        color: #404bbf;
+} 
+
+    .open-menu-button{
+        display: none;
+}
+}
+
+@media screen and (min-width:1158px) {
+    .logo{
+        margin-right: 76px;
+    }
+
+    .header-list{
+        flex-direction: row;
+        gap: 40px;
+    }
+
+    .contacts{
+        font-size: 16px;
+        line-height: 1.5;
+    }
+}
+
+
 
 /* Effective Solutions */
 .main-box{
