--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ list-style-type: none;
 }
 /* Header */
 .container{
-width: 320px;
+max-width: 320px;
 padding: 0 16px;
 margin: 0 auto;
 }
@@ -66,6 +66,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 color: #4d5ae5;
 text-decoration: none;
+padding: 17px 0;
 }
 
 .logo-tech{
@@ -87,10 +88,11 @@ display: none;
     display: none;
     }
 
-.open-menu-button{
+.open-menu-btn{
     background-color: transparent;
     cursor: pointer;
     line-height: 0;
+    padding: 0;
     border: none;
 }
 
@@ -161,7 +163,7 @@ display: none;
         margin-left: auto;
 }
 
-    .header-list{
+    .address-list{
         display: flex;
         flex-direction: column;
         gap: 12px;
@@ -863,4 +865,132 @@ padding: 72px 24px 24px 24px;
     border: none;
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Menu */
+
+.header-menu-box.is-open{
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+
+.header-menu-box{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #fff;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.navigation-menu{
+margin-top: 72px;
+margin-left: 16px;
+margin-bottom: 168px;
+display: flex;
+flex-direction: column;
+align-items: flex-start;
+}
+
+.header-close-box{
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 24px;
+    padding-top: 24px;
+}
+
+.header-close-button{
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-close-button:hover,
+.header-close-button:focus{
+    background-color: #404bbf;
+    border: none;
+    fill: #fff;
+}
+
+.header-close-icon{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-list{
+    padding-top: 72px;
+    padding-left: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.header-menu-link{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    text-decoration: none;
+}
+
+.header-menu-link-box{
+    color: #404bbf;
+}
+
+.address-menu{
+    margin-left: 16px;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        text-decoration: none;
+}
+
+.address-menu-list{
+    display: flex;
+        flex-direction: column;
+        gap: 24px;
+        margin-bottom: 48px;
+        text-decoration: none;
+}
+
+.contacts-menu{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #434455;
+    text-decoration: none;
+    font-style: normal;
+}
+
+.contacts-menu:hover,
+.contacts-menu:focus{
+    color: #4d5ae5
+}
+
+.header-list-icon{
+    display: flex;
+    gap: 40px;
 }
