--- a/css/styles.css
+++ b/css/styles.css
@@ -992,5 +992,8 @@ align-items: flex-start;
 
 .header-list-icon{
     display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: row;
     gap: 40px;
 }
