--- a/css/styles.css
+++ b/css/styles.css
@@ -374,7 +374,7 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
 
 /* Features */
 .features-box{
-padding: 120px 0;
+margin-bottom: 96px;
 }
 
 .visually-hidden{
@@ -390,24 +390,14 @@ clip: rect(0 0 0 0);
 overflow: hidden;
 }
 
-.features-title{
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 40px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
-    text-transform: capitalize;
-}
-
 .features-list{
     display: flex;
-    gap: 24px;
+    gap: 72px;
+    flex-direction: column;
 }
 
 .features-list-item{
-    width: calc((100% - 72px) / 4);
+
 }
 
 .features-icons{
@@ -420,26 +410,80 @@ margin-bottom: 8px;
 display: flex;
 justify-content: center;
 align-items: center;
+display: none;
 }
 
+
 .title-item{
-font-weight: 500;
-font-size: 20px;
-line-height: 1.2;
+font-weight: 700;
+font-size: 36px;
+line-height: 1.11;
 letter-spacing: 0.02em;
 color: #2e2f42;
 text-decoration: none;
 margin-bottom: 8px;
+display: flex;
+justify-content: center;
 }
 
 .title-descri{
-font-weight: 400;
+font-weight: 500;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 text-decoration: none;
 }
+
+@media screen and (min-width: 768px) {
+    .features-list{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            gap: 72px 24px;
+    }
+
+    .features-list-item{
+        width: calc((100% - 24px) / 2);
+    }
+
+    .title-item{
+        justify-content: flex-start;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .features-box{
+            padding-top: 120px;
+            padding-bottom: 120px;
+    }
+
+    .features-list{
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: row;
+    }
+
+    .features-list-item{
+        width: calc((100% - 72px) / 4);
+        position: relative;
+    }
+
+    .features-icons{
+        display: flex;
+    }
+
+    .title-item{
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+    }
+
+    .title-descri{
+        font-size: 400;
+    }
+}
+
  /*  Team */
  .team-container{
 padding: 32px 0;
