--- a/css/styles.css
+++ b/css/styles.css
@@ -579,7 +579,7 @@ margin-bottom: 8px;
  }
 
  @media screen and (min-width: 768px) {
-    .container{
+    .team-container-box{
         padding-left: 108px;
         padding-right: 108px;
     }
@@ -603,7 +603,7 @@ margin-bottom: 8px;
         padding-top: 120px;
     }
 
-    .container{
+    .team-container-box{
         padding-left: 15px;
         padding-right: 15px;
     }
@@ -629,11 +629,11 @@ border-top: none;
 
 .portfolio-box{
     text-decoration: none;
-    padding-top: 120px;
-    padding-bottom: 120px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
-.portfolio-title{
+/* .portfolio-title{
     font-weight: 700;
 font-size: 36px;
 line-height: 1.11;
@@ -642,7 +642,7 @@ text-align: center;
 color: #2e2f42;
 text-transform: capitalize;
 margin-bottom: 72px;
-}
+} */
 
 .portfolio-list{
     text-decoration: none;
@@ -653,17 +653,16 @@ margin-bottom: 72px;
 }
 
 .portfolio-item{
-    width: calc((100% - 48px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-item:hover{
+.portfolio-item:hover,
+.portfolio-item:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-wrap{
-    width: 360px;
-    height: 300px;
+    width: 288px;
     position: relative;
     overflow: hidden;
 }
@@ -687,6 +686,9 @@ margin-bottom: 72px;
 
 .portfolio-item:hover .portfolio-text{
     transform: translateY(0);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-container{
@@ -712,6 +714,47 @@ margin-bottom: 8px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455; 
+}
+
+@media screen and (min-width: 768px) {
+    .portfolio-list{
+        display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            gap: 72px 24px;
+    }
+
+    .portfolio-item{
+        width: calc((100% - 24px) / 2);
+    }
+
+    .portfolio-wrap{
+        width: 356px;
+        height: 300px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .portfolio-box{
+        padding-top: 120px;
+            padding-bottom: 120px;
+    }
+
+    .portfolio-list{
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 48px;
+    }
+
+    .portfolio-item{
+        width: calc((100% - 48px) / 3);
+    }
+
+    .portfolio-wrap{
+        width: 360px;
+        height: 300px;
+    }
 }
 
 /* Footer */
