--- a/css/styles.css
+++ b/css/styles.css
@@ -633,7 +633,7 @@ border-top: none;
     padding-bottom: 96px;
 }
 
-/* .portfolio-title{
+.portfolio-title{
     font-weight: 700;
 font-size: 36px;
 line-height: 1.11;
@@ -642,13 +642,11 @@ text-align: center;
 color: #2e2f42;
 text-transform: capitalize;
 margin-bottom: 72px;
-} */
+}
 
 .portfolio-list{
-    text-decoration: none;
     display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
+ flex-direction: column;
     row-gap: 48px;
 }
 
@@ -665,6 +663,11 @@ margin-bottom: 72px;
     width: 288px;
     position: relative;
     overflow: hidden;
+}
+
+.portfolio-img{
+    display: block;
+   max-width: 100%;
 }
 
 .portfolio-text{
@@ -686,16 +689,13 @@ margin-bottom: 72px;
 
 .portfolio-item:hover .portfolio-text{
     transform: translateY(0);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-container{
     border-bottom: 1px solid #e7e9fc;
     border-left: 1px solid #e7e9fc;
     border-right: 1px solid #e7e9fc;
-    padding:     32px 16px;
+    padding: 32px 16px;
 }
 
 .portfolio-name{
