--- a/css/styles.css
+++ b/css/styles.css
@@ -850,10 +850,6 @@ gap: 16px;
     background-color: #31d0aa;
 }
 
-/* .form-container-footer{
-    margin-left: 80px;
-} */
-
 .text-form-footer{
     margin-bottom: 16px;
     font-weight: 500;
@@ -1007,15 +1003,15 @@ pointer-events: auto;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 border-radius: 4px;
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-padding: 72px 24px 24px 24px;
+padding: 72px 16px 24px 16px;
 }
 
 .modal-close{
@@ -1136,19 +1132,6 @@ padding: 72px 24px 24px 24px;
     margin-bottom: 24px;
 }
 
-.visually-hidden{
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
-}
-
 .modal-accept{
     font-size: 12px;
     line-height: 1.17;
@@ -1198,6 +1181,22 @@ padding: 72px 24px 24px 24px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 768px) {
+    .modal{
+        width: 408px;
+            min-height: 584px;
+            padding: 72px 24px 24px 24px;
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .modal{
+        width: 408px;
+        min-height: 584px;
+        padding: 72px 24px 24px 24px;
+    }
+}
+
 /* Menu */
 
 .header-menu-box.is-open{
@@ -1218,6 +1217,10 @@ padding: 72px 24px 24px 24px;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1245,7 +1248,9 @@ align-items: flex-start;
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    display: flex;
+    display: block;
+    margin-left: auto;
+    margin-bottom: 24px;
     align-items: center;
     justify-content: center;
     background-color: #e7e9fc;
@@ -1283,8 +1288,9 @@ align-items: flex-start;
     text-decoration: none;
 }
 
-.header-menu-link-box{
-    color: #404bbf;
+.header-menu-link:hover,
+.header-menu-link:focus{
+    color: #4d5ae5
 }
 
 .address-menu{
