--- a/css/styles.css
+++ b/css/styles.css
@@ -223,9 +223,9 @@ background-position: center;
 background-size: cover;
 margin-left: auto;
 margin-right: auto;
-margin-bottom: 96px;
+/* margin-bottom: 96px; */
 max-width: 320px;
-height: 432px;
+/* height: 432px; */
 }
 
 .hero-container{
@@ -356,7 +356,10 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
 @media screen and (min-width: 1158px) {
     .main-box{
         max-width: 1440px;
-        padding-bottom: 188px;
+        /* padding-top: 188px; */
+        padding: 188px 0;
+        background-image: linear-gradient(to bottom, rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
+        url(../images/people-office-2х.jpg);
     }
 
     .main-title{
@@ -374,7 +377,8 @@ background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)),
 
 /* Features */
 .features-box{
-margin-bottom: 96px;
+    padding-top: 96px;
+    padding-bottom: 96px;
 }
 
 .visually-hidden{
@@ -454,8 +458,8 @@ text-decoration: none;
 
 @media screen and (min-width: 1158px) {
     .features-box{
-            margin-top: 120px;
-            margin-bottom: 120px;
+            padding-top: 120px;
+           padding-bottom: 120px;
     }
 
     .features-list{
@@ -480,7 +484,7 @@ text-decoration: none;
     }
 
     .title-descri{
-        font-size: 400;
+        font-weight: 400;
     }
 }
 
@@ -580,8 +584,9 @@ margin-bottom: 8px;
 
  @media screen and (min-width: 768px) {
     .team-container-box{
-        padding-left: 108px;
-        padding-right: 108px;
+        /* padding-left: 108px;
+        padding-right: 108px; */
+        width: 584px;
     }
 
     .team-list{
@@ -606,6 +611,7 @@ margin-bottom: 8px;
     .team-container-box{
         padding-left: 15px;
         padding-right: 15px;
+        width: 1128px;
     }
 
     .team-list{
@@ -1222,12 +1228,15 @@ padding: 72px 16px 24px 16px;
     justify-content: space-between;
     overflow: auto;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding-top: 72px;
+    padding-left: 16px;
 }
 
+
 .navigation-menu{
-margin-top: 72px;
+/* margin-top: 72px;
 margin-left: 16px;
-margin-bottom: 168px;
+margin-bottom: 168px; */
 display: flex;
 flex-direction: column;
 align-items: flex-start;
@@ -1272,8 +1281,8 @@ align-items: flex-start;
 }
 
 .header-menu-list{
-    padding-top: 72px;
-    padding-left: 16px;
+    /* padding-top: 72px;
+    padding-left: 16px; */
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -1286,6 +1295,10 @@ align-items: flex-start;
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-decoration: none;
+}
+
+.header-menu-link-box{
+    color: #404bbf;
 }
 
 .header-menu-link:hover,
@@ -1320,6 +1333,10 @@ align-items: flex-start;
     color: #434455;
     text-decoration: none;
     font-style: normal;
+}
+
+.contacts-menu-box{
+    color: #4d5ae5;
 }
 
 .contacts-menu:hover,
